<?xml version="1.0" encoding="utf-8"?>

<!-- Parent linear layout with a vertical orientation -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    >

    <!-- Text view for the 'EMI Calculator' title -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:paddingTop="13dp"
        android:text="@string/EMIcalctitle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#252327"
        android:background="#CBBDE8"

        />

    <!-- Linear layout containing a TextView and EditText field for the original mortgage amount -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:paddingTop="50dp"
        android:paddingBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/originalAmtLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/originalAmtString"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            />

        <EditText
            android:id="@+id/originalAmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:ems="10"
            android:hint="200000"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:backgroundTint="@color/design_default_color_primary"
            />


    </LinearLayout>

    <!-- Linear layout containing a TextView and EditText field for the down payment -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/downPaymentLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/downPaymentString"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>

        <EditText
            android:id="@+id/downPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="50000"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/design_default_color_primary"
            />

    </LinearLayout>

    <!-- Linear layout containing a TextView and EditText field for the interest rate -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:weightSum="1"
        android:layout_gravity="right">

        <TextView
            android:id="@+id/interestRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/interestRateString"

            />

        <EditText
            android:id="@+id/interestRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:hint="6.40%"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:backgroundTint="@color/design_default_color_primary"/>

    </LinearLayout>

    <!-- Linear layout containing a TextView and EditText field for the amortization period -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/amortizationLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="1dp"
            android:paddingStart="16dp"
            android:text="@string/amortizationString" />

        <EditText
            android:id="@+id/amortization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="25"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:backgroundTint="@color/design_default_color_primary"/>

    </LinearLayout>

    <!-- Linear layout for the 'Calculate' and 'Clear' buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="40dp"
        android:gravity="center"

        android:orientation="horizontal">

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/calculateBtnString">

        </Button>

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="84dp"
            android:layout_height="48dp"
            android:text="@string/clearBtnString">

        </Button>

    </LinearLayout>

</LinearLayout>